[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
nanoid = "0.4.0"
once_cell = "1.19.0"
poise = "0.6.1"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "bigdecimal"] }
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
